Fix: Axes uneven lengths

--- a/src/components/Results/Axes/Axes.scss
+++ b/src/components/Results/Axes/Axes.scss
@@ -4,8 +4,8 @@
 }
 
 .axis {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 3.5rem calc(100% - 7rem) 3.5rem;
   width: 100%;
   border-radius: 0.5rem;
   overflow: hidden;
